[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
alembic = "^1.16.4"
tronpy = "^0.6.1"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[tool.black]
line-length = 69